# kafkatui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  example_config.yaml
.github/workflows/: ci.yml
src/: config.rs  connection.rs  lib.rs  main.rs  schema_registry.rs  stores.rs  traits.rs
src/app/: mod.rs
src/services/: mod.rs
src/ui/: broker.rs  dialogs.rs  helpers.rs  message_view.rs  mod.rs  partition_view.rs  profile.rs  search_view.rs  status.rs
src/utils/: formatting.rs  mod.rs  validation.rs
tests/: validation_test.rs
