[package]
name = "kafkatui"
version = "1.0.0"
edition = "2021"
authors = ["KafkaTUI Contributors"]
description = "A terminal user interface for Apache Kafka with SASL/SSL support, Avro deserialization, and multi-broker management"
license = "MIT"
repository = "https://github.com/lukaesch/kafkatui"
homepage = "https://github.com/lukaesch/kafkatui"
documentation = "https://docs.rs/kafkatui"
readme = "README.md"
keywords = ["kafka", "tui", "terminal", "avro", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["kafka-exports/", ".gitignore"]

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
apache-avro = "0.16"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
lru = "0.12"
serde_yaml = "0.9"
directories = "5.0"
keyring = "2.3"
async-trait = "0.1"
